--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
 
 <div class="container">
   <div class="event-image">
-    <img src="C:\Users\3420 i5(12)\OneDrive\Desktop\event update\event.jpeg" alt="Event Image" width="600" height="500" style="max-width: 100%;">
+    <img src="https://github.com/NivethaSudhahar/event-update-form/blob/main/event.jpeg" alt="Event Image" width="600" height="500" style="max-width: 100%;">
   </div>
   <div class="booking-form">
     <h2>Concert Seat Booking</h2>
