--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       <div id="viewer_names">
      
       </div>
+        <label for="Additional">Additional Information</label>
+
+           <textarea id="additional_info" name="additional_info" ></textarea>
+
 
       <input type="submit" value="Book Seat">
       <input type="button" value="Cancel" onclick="window.location.reload();">
