--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div id="viewer_names">
      
       </div>
-        <label for="Additional">Additional Information</label>
+        <br><label for="Additional">Additional Information</label>
 
            <textarea id="additional_info" name="additional_info" ></textarea>
 
